# CTetris

./: CMakeLists.txt  CMakePresets.json  main.c
include/: app.h  game.h  piece_info.h  sprite.h  window.h
src/: app.c  game.c  piece_info.c  sprite.c  window.c
